@@ -278,7 +278,7 @@ Translate Unix filepaths and shell globs to Mac style.
 sub patternify {
     my($unix) = @_;
     my(@mac);
-    use bytes; # Non-UTF-8 high bytes below.
+    use ExtUtils::MakeMaker::bytes; # Non-UTF-8 high bytes below.
 
     foreach (split(/[ \t\n]+/, $unix)) {
 	if (m|/|) {
